--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,37 +1,40 @@
-<div>
-  <h1> Login to PlaceToBeer!</h1>
-  <form (ngSubmit)="onLogin()" #subForm="ngForm">
-
-
-    <div class="flex flex-col div-input-field"
-         [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}">
-      <label class="label-input-field" [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}"
-             for="email">
-        email </label>
-      <input id="email" name="email" class="input-field"
-             type="text" placeholder="email" ngModel pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required
-             #emailControl="ngModel"/>
-    </div>
-    <div class="flex flex-col div-input-field"
-         [ngClass]="{'border-red-700': pwControl.invalid}">
-      <label class="label-input-field" [ngClass]="{'border-red-700': pwControl.invalid}"
-             for="pw"
-      >Password </label>
-      <input class="input-field" id="pw" name="pw"
-             type="password" placeholder="" ngModel minlength="8" #pwControl="ngModel"/>
-    </div>
-    <div class="flex flex-row">
-      <button class="btn btn-create cursor-pointer"
-              type="submit" [disabled]="(pwControl.invalid||!pwControl.touched)||emailControl.invalid">
-        Login
-      </button>
-      <button class="btn btn-cancel cursor-pointer" type="button" (click)="onCancel()">
-        Cancel
-      </button>
-    </div>
-    <button class="btn bg-ptb-blue-600 cursor-pointer" type="button" (click)="onRegister()">
-      No Account yet? Register Here!
-    </button>
-  </form>
+<div class="flex h-full items-center justify-center">
+  <div class="flex flex-col space-y-4 bg-ptb-gray-300 p-6 rounded-md w-1/4">
+    <div class="text-2xl font-semibold text-gray-800">Login to PlaceToBeer</div>
+    <form (ngSubmit)="onLogin()" #subForm="ngForm">
+      <div class="flex flex-col space-y-6">
+        <div class="flex flex-col div-input-field w-full"
+             [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}">
+          <label class="label-input-field" [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}"
+                 for="email">
+            Email </label>
+          <input id="email" name="email" class="input-field"
+                 type="text" ngModel pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required
+                 #emailControl="ngModel"/>
+        </div>
+        <div class="flex flex-col div-input-field w-full"
+             [ngClass]="{'border-red-700': pwControl.invalid}">
+          <label class="label-input-field" [ngClass]="{'border-red-700': pwControl.invalid}"
+                 for="pw"
+          >Password </label>
+          <input class="input-field" id="pw" name="pw"
+                 type="password" placeholder="" ngModel minlength="8" #pwControl="ngModel"/>
+        </div>
+        <div class="flex flex-row justify-end space-x-4">
+          <button class="btn btn-create cursor-pointer"
+                  type="submit" [disabled]="(pwControl.invalid||!pwControl.touched)||emailControl.invalid">
+            Login
+          </button>
+          <button class="btn btn-cancel cursor-pointer" type="button" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+        <button class="text-ptb-blue-900 cursor-pointer italic" type="button" (click)="onRegister()">
+          No Account yet? Register Here!
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
+
 
