--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,45 +1,51 @@
-<form (ngSubmit)="onRegister()" #subForm="ngForm">
-  <h1> Welcome to PlaceToBeer!</h1>
-  <h3> Nice to meet you</h3>
-  <div class="flex flex-col div-input-field"
-       [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}">
-    <label class="label-input-field" [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}"
-           for="email">
-      email </label>
-    <input id="email" name="email" class="input-field"
-           type="text" placeholder="email" ngModel pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required
-           #emailControl="ngModel"/>
-  </div>
-  <div class="flex flex-col div-input-field">
-    <label class="label-input-field" [ngClass]="{'border-red-700': nameControl.invalid}"
-           for="name">
-      Name
-    </label>
-    <input id="name" name="name" class="input-field"
-           type="text" placeholder="" ngModel minlength="1" #nameControl="ngModel"/>
-  </div>
-  <div class="flex flex-col div-input-field"
-       [ngClass]="{'border-red-700': pwControl.touched && pwControl.invalid}">
-    <label class="label-input-field" [ngClass]="{'border-red-700': pwControl.invalid}"
-           for="pw"
-    >Password </label>
-    <input class="input-field" id="pw" name="pw"
-           type="password" placeholder="" ngModel minlength="8" #pwControl="ngModel"/>
-  </div>
-  <div *ngIf="pwControl.errors?.minlength" class="text-red-700">
-    Password must be at least 8 characters long
-  </div>
-  <div class="btn flex flex-row">
-    <button class="btn btn-create cursor-pointer"
-            type="Submit" [disabled]="(pwControl.invalid||!pwControl.touched)||emailControl.invalid"
-            >
-      Login
-    </button>
-    <button class="btn btn-cancel cursor-pointer" type="button" (click)="onCancel()">
-      Cancel
-    </button>
-  </div>
+<div class="flex h-full items-center justify-center">
+  <div class="flex flex-col space-y-4 bg-ptb-gray-300 p-6 rounded-md w-1/4">
+    <div class="text-2xl font-semibold text-gray-800">Register to PlaceToBeer!</div>
+    <form (ngSubmit)="onRegister()" #subForm="ngForm">
+      <div class="flex flex-col space-y-6">
+        <div class="flex flex-col div-input-field w-full"
+             [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}">
+          <label class="label-input-field" [ngClass]="{'border-red-700': emailControl.touched && emailControl.invalid}"
+                 for="email">
+            Email </label>
+          <input id="email" name="email" class="input-field"
+                 type="text" ngModel pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required
+                 #emailControl="ngModel"/>
+        </div>
+        <div class="flex flex-col div-input-field w-full">
+          <label class="label-input-field" [ngClass]="{'border-red-700': nameControl.invalid}"
+                 for="name">
+            Name
+          </label>
+          <input id="name" name="name" class="input-field"
+                 type="text" ngModel minlength="1" required #nameControl="ngModel"/>
+        </div>
+        <div>
+          <div class="flex flex-col div-input-field w-full" [ngClass]="{'border-red-700': pwControl.touched && pwControl.invalid}">
+            <label class="label-input-field" [ngClass]="{'border-red-700': pwControl.invalid}"
+                   for="pw">
+              Password
+            </label>
+            <input class="input-field" id="pw" name="pw"
+                   type="password" ngModel minlength="8" #pwControl="ngModel"/>
+          </div>
+        </div>
 
-</form>
+        <div *ngIf="pwControl.errors?.minlength" class="text-red-700">
+          Password must be at least 8 characters long
+        </div>
+        <div class="flex flex-row justify-end space-x-4">
+          <button class="btn btn-create cursor-pointer"
+                  type="Submit" [disabled]="(pwControl.invalid||!pwControl.touched)||emailControl.invalid">
+            Register
+          </button>
+          <button class="btn btn-cancel cursor-pointer" type="button" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 
 
