proposal loading only if current group not empty

--- a/src/app/popups/info-popup/info-popup.component.html
+++ b/src/app/popups/info-popup/info-popup.component.html
@@ -3,7 +3,7 @@
   <div class="flex flex-col space-y-4">
     <div class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill flex flex-col space-y-4">
       <div style="background-image: url(assets/img/bierkrug.svg)" class="object-contain h-40 opacity-75"></div>
-      <div class="text-3xl text-ptb-gray-900 text-center font-semibold my-auto">What is <span class="4xl text-ptb-orange-600">PlaceToBeer</span>  for a crazy thing?</div>
+      <div class="text-3xl text-ptb-gray-900 text-center font-semibold my-auto">What crazy thing is <span class="4xl text-ptb-orange-600">PlaceToBeer</span>?</div>
 
     </div>
 
